--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "fs-extra": "^0.30.0",
     "glob": "^7.0.3",
     "handlebars": "^4.0.5",
+    "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.19.0",
     "istanbul-instrumenter-loader": "^0.2.0",
     "json-loader": "^0.5.4",
