--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "exit": "^0.1.2",
     "exports-loader": "^0.6.3",
     "expose-loader": "^0.7.1",
+    "extract-text-webpack-plugin": "^2.0.0-beta.3",
     "file-loader": "^0.8.5",
     "fs-extra": "^0.30.0",
     "glob": "^7.0.3",
