--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "lodash": "^4.11.1",
+    "markup-inline-loader": "^0.1.1",
     "node-sass": "^3.7.0",
     "npm": "3.10.2",
     "offline-plugin": "^3.4.1",
