--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "copy-webpack-plugin": "^3.0.1",
     "core-js": "^2.4.0",
     "css-loader": "^0.23.1",
+    "dsv-loader": "^1.1.0",
     "ember-cli": "2.5.0",
     "ember-cli-string-utils": "^1.0.0",
     "enhanced-resolve": "^2.2.2",
@@ -54,6 +55,7 @@
     "fs-extra": "^0.30.0",
     "glob": "^7.0.3",
     "handlebars": "^4.0.5",
+    "hson-loader": "^2.0.0",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.19.0",
     "istanbul-instrumenter-loader": "^0.2.0",
@@ -98,7 +100,9 @@
     "webpack": "2.1.0-beta.18",
     "webpack-dev-server": "2.1.0-beta.0",
     "webpack-md5-hash": "0.0.5",
-    "webpack-merge": "^0.14.0"
+    "webpack-merge": "^0.14.0",
+    "xml-loader": "^1.1.0",
+    "yaml-loader": "^0.4.0"
   },
   "ember-addon": {
     "paths": [
