feat(build): add support for markdown and jade/hug
using markdown-it-loader and jade-html-loader

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.19.0",
     "istanbul-instrumenter-loader": "^0.2.0",
+    "jade-html-loader": "0.0.3",
     "json-loader": "^0.5.4",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.8.0",
@@ -66,6 +67,16 @@
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "lodash": "^4.11.1",
+    "markdown-it-abbr": "^1.0.3",
+    "markdown-it-deflist": "^2.0.1",
+    "markdown-it-emoji": "^1.2.0",
+    "markdown-it-footnote": "^3.0.1",
+    "markdown-it-highlightjs": "^2.0.0",
+    "markdown-it-ins": "^2.0.0",
+    "markdown-it-loader": "^0.3.2",
+    "markdown-it-mark": "^2.0.0",
+    "markdown-it-sub": "^1.0.0",
+    "markdown-it-sup": "^1.0.0",
     "markup-inline-loader": "^0.1.1",
     "node-sass": "^3.7.0",
     "npm": "3.10.2",
@@ -76,6 +87,9 @@
     "phantomjs-prebuilt": "^2.1.7",
     "postcss-loader": "^0.9.1",
     "protractor": "^3.3.0",
+    "pug": "^2.0.0-beta5",
+    "pug-html-loader": "^1.0.8",
+    "pug-loader": "^2.2.1",
     "raw-loader": "^0.5.1",
     "remap-istanbul": "^0.6.4",
     "resolve": "^1.1.7",
