--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "chalk": "^1.1.3",
     "common-tags": "^1.3.1",
     "css-loader": "^0.26.1",
+    "css-with-mapping-loader": "0.0.3",
     "cssnano": "^3.10.0",
     "debug": "^2.1.3",
     "denodeify": "^1.2.1",
@@ -62,6 +63,7 @@
     "fs-extra": "^0.30.0",
     "get-caller-file": "^1.0.0",
     "glob": "^7.0.3",
+    "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.19.0",
     "inflection": "^1.7.0",
     "inquirer": "^0.12.0",
@@ -74,6 +76,7 @@
     "loader-utils": "^0.2.16",
     "lodash": "^4.11.1",
     "magic-string": "^0.16.0",
+    "markup-inline-loader": "^0.1.3",
     "minimatch": "^3.0.3",
     "node-modules-path": "^1.0.0",
     "node-sass": "^4.3.0",
