--- a/package.json
+++ b/package.json
@@ -39,15 +39,21 @@
   },
   "homepage": "https://github.com/angular/angular-cli",
   "dependencies": {
+    "@angular-cli/ast-tools": "^1.0.16",
+    "@angular-cli/base-href-webpack": "^1.0.16",
     "@angular/compiler": "^2.3.1",
     "@angular/compiler-cli": "^2.3.1",
     "@angular/core": "^2.3.1",
     "@angular/tsc-wrapped": "^0.5.0",
+    "@ngtools/json-schema": "^1.0.2",
+    "@ngtools/logger": "^0.1.4",
+    "@ngtools/webpack": "^1.2.7",
     "async": "^2.1.4",
     "autoprefixer": "^6.5.3",
     "chalk": "^1.1.3",
     "common-tags": "^1.3.1",
     "css-loader": "^0.26.1",
+    "css-with-mapping-loader": "0.0.3",
     "cssnano": "^3.10.0",
     "debug": "^2.1.3",
     "denodeify": "^1.2.1",
@@ -62,6 +68,7 @@
     "fs-extra": "^0.30.0",
     "get-caller-file": "^1.0.0",
     "glob": "^7.0.3",
+    "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.19.0",
     "inflection": "^1.7.0",
     "inquirer": "^0.12.0",
@@ -74,6 +81,7 @@
     "loader-utils": "^0.2.16",
     "lodash": "^4.11.1",
     "magic-string": "^0.16.0",
+    "markup-inline-loader": "^0.1.3",
     "minimatch": "^3.0.3",
     "node-modules-path": "^1.0.0",
     "node-sass": "^4.3.0",
