--- a/packages/@angular/cli/package.json
+++ b/packages/@angular/cli/package.json
@@ -38,6 +38,7 @@
     "chalk": "^1.1.3",
     "common-tags": "^1.3.1",
     "css-loader": "^0.26.1",
+    "css-with-mapping-loader": "0.0.5",
     "cssnano": "^3.10.0",
     "debug": "^2.1.3",
     "denodeify": "^1.2.1",
@@ -51,6 +52,7 @@
     "fs-extra": "^0.30.0",
     "get-caller-file": "^1.0.0",
     "glob": "^7.0.3",
+    "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.19.0",
     "inflection": "^1.7.0",
     "inquirer": "^0.12.0",
@@ -61,6 +63,7 @@
     "less": "^2.7.2",
     "less-loader": "^2.2.3",
     "lodash": "^4.11.1",
+    "markup-inline-loader": "^0.1.3",
     "minimatch": "^3.0.3",
     "node-modules-path": "^1.0.0",
     "node-sass": "^4.3.0",
