chore: update all tsconfig libs to enable es2016 apis (#4458)

--- a/packages/@angular/cli/blueprints/ng2/files/__path__/tsconfig.json
+++ b/packages/@angular/cli/blueprints/ng2/files/__path__/tsconfig.json
@@ -4,9 +4,12 @@
     "declaration": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "lib": ["es6", "dom"],
+    "lib": [
+      "es2015",
+      "dom"
+    ],
     "mapRoot": "./",
-    "module": "es6",
+    "module": "es2015",
     "moduleResolution": "node",
     "outDir": "<%= relativeRootPath %>/dist/out-tsc",
     "sourceMap": true,
