--- a/packages/@angular/cli/blueprints/ng2/files/e2e/tsconfig.json
+++ b/packages/@angular/cli/blueprints/ng2/files/e2e/tsconfig.json
@@ -4,6 +4,9 @@
     "declaration": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "lib": [
+      "es2016"
+    ],
     "module": "commonjs",
     "moduleResolution": "node",
     "outDir": "../dist/out-tsc-e2e",
