--- a/packages/@angular/cli/tsconfig.json
+++ b/packages/@angular/cli/tsconfig.json
@@ -13,7 +13,9 @@
     "sourceMap": true,
     "sourceRoot": "/",
     "target": "es5",
-    "lib": ["es6"],
+    "lib": [
+      "es2016"
+    ],
     "skipLibCheck": true,
     "typeRoots": [
       "../../../node_modules/@types"
