--- a/packages/@ngtools/webpack/tsconfig.json
+++ b/packages/@ngtools/webpack/tsconfig.json
@@ -9,7 +9,10 @@
     "noImplicitAny": true,
     "outDir": "../../../dist/@ngtools/webpack",
     "rootDir": ".",
-    "lib": ["es2015", "es6", "dom"],
+    "lib": [
+      "es2016",
+      "dom"
+    ],
     "target": "es5",
     "sourceMap": true,
     "sourceRoot": "/",
