--- a/packages/@angular/cli/package.json
+++ b/packages/@angular/cli/package.json
@@ -37,6 +37,7 @@
     "chalk": "^1.1.3",
     "common-tags": "^1.3.1",
     "css-loader": "^0.26.1",
+    "css-with-mapping-loader": "0.0.5",
     "cssnano": "^3.10.0",
     "debug": "^2.1.3",
     "denodeify": "^1.2.1",
@@ -50,6 +51,7 @@
     "fs-extra": "^0.30.0",
     "get-caller-file": "^1.0.0",
     "glob": "^7.0.3",
+    "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.19.0",
     "inflection": "^1.7.0",
     "inquirer": "^0.12.0",
