--- a/packages/@ngtools/webpack/package.json
+++ b/packages/@ngtools/webpack/package.json
@@ -36,6 +36,6 @@
     "@angular/core": "^2.3.1 || >=4.0.0-beta <5.0.0",
     "@angular/tsc-wrapped": "^0.5.0",
     "typescript": "^2.0.2",
-    "webpack": "2.2.0"
+    "webpack": "^2.2.0"
   }
 }
