refactor: upgrade dependencies
1. All upgraded dependencies involve no code changes
2. `dependencies` of repo's `package.json` is the join of packages'
dependencies

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,10 @@
     "node": true,
     "es6": true
   },
-  "parser": "espree",
+  "parserOptions": {
+    "ecmaVersion": 6,
+    "sourceType": "module"
+  },
   "rules": {
     "no-alert": "off",
     "no-array-constructor": "off",
