--- a/package.json
+++ b/package.json
@@ -51,35 +51,35 @@
     "cssnano": "^3.10.0",
     "debug": "^2.1.3",
     "denodeify": "^1.2.1",
-    "diff": "^2.2.2",
+    "diff": "^3.1.0",
     "ember-cli-normalize-entity-name": "^1.0.0",
     "ember-cli-string-utils": "^1.0.0",
-    "enhanced-resolve": "^2.3.0",
+    "enhanced-resolve": "^3.1.0",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
-    "file-loader": "^0.8.5",
+    "file-loader": "^0.10.0",
     "findup": "0.1.5",
-    "fs-extra": "^0.30.0",
+    "fs-extra": "~2.0.0",
     "get-caller-file": "^1.0.0",
     "glob": "^7.0.3",
     "html-webpack-plugin": "^2.19.0",
     "inflection": "^1.7.0",
-    "inquirer": "^0.12.0",
-    "isbinaryfile": "^2.0.3",
+    "inquirer": "^3.0.0",
+    "isbinaryfile": "^3.0.0",
     "json-loader": "^0.5.4",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^1.8.0",
+    "karma-webpack": "^2.0.0",
     "less": "^2.7.2",
     "less-loader": "^2.2.3",
     "loader-utils": "^0.2.16",
     "lodash": "^4.11.1",
-    "magic-string": "^0.16.0",
+    "magic-string": "^0.19.0",
     "minimatch": "^3.0.3",
     "node-modules-path": "^1.0.0",
     "node-sass": "^4.3.0",
-    "nopt": "^3.0.1",
-    "opn": "4.0.1",
-    "portfinder": "1.0.9",
-    "postcss-loader": "^0.9.1",
+    "nopt": "^4.0.1",
+    "opn": "4.0.2",
+    "portfinder": "~1.0.12",
+    "postcss-loader": "^0.13.0",
     "raw-loader": "^0.5.1",
     "resolve": "^1.1.7",
     "rimraf": "^2.5.3",
@@ -98,9 +98,9 @@
     "temp": "0.8.3",
     "typescript": "~2.0.3",
     "url-loader": "^0.5.7",
-    "walk-sync": "^0.2.6",
-    "webpack": "2.2.0",
-    "webpack-dev-server": "2.2.0-rc.0",
+    "walk-sync": "^0.3.1",
+    "webpack": "~2.2.0",
+    "webpack-dev-server": "~2.2.0",
     "webpack-merge": "^2.4.0",
     "webpack-sources": "^0.1.3",
     "zone.js": "^0.7.2"
@@ -116,30 +116,30 @@
     "@types/common-tags": "^1.2.4",
     "@types/denodeify": "^1.2.29",
     "@types/express": "^4.0.32",
-    "@types/fs-extra": "^0.0.31",
+    "@types/fs-extra": "0.0.37",
     "@types/glob": "^5.0.29",
     "@types/jasmine": "^2.2.32",
     "@types/lodash": "4.14.50",
     "@types/mock-fs": "^3.6.30",
     "@types/node": "^6.0.36",
-    "@types/request": "0.0.30",
-    "@types/rimraf": "0.0.25-alpha",
+    "@types/request": "0.0.39",
+    "@types/rimraf": "0.0.28",
     "@types/semver": "^5.3.30",
     "@types/source-map": "^0.5.0",
     "@types/webpack": "^2.2.4",
     "chai": "^3.5.0",
     "conventional-changelog": "^1.1.0",
-    "dtsgenerator": "^0.7.1",
-    "eslint": "^2.8.0",
-    "exists-sync": "0.0.3",
+    "dtsgenerator": "^0.9.1",
+    "eslint": "^3.11.0",
+    "exists-sync": "0.0.4",
     "express": "^4.14.0",
     "jasmine": "^2.4.1",
-    "jasmine-spec-reporter": "^2.7.0",
+    "jasmine-spec-reporter": "^3.2.0",
     "minimist": "^1.2.0",
     "mocha": "^3.2.0",
-    "mock-fs": "^3.12.1",
+    "mock-fs": "^4.0.0",
     "npm-run": "^4.1.0",
-    "npm-run-all": "^3.0.0",
+    "npm-run-all": "^4.0.0",
     "object-assign": "^4.0.1",
     "request": "^2.74.0",
     "resolve-bin": "^0.4.0",
@@ -147,7 +147,7 @@
     "sinon": "^1.17.3",
     "through": "^2.3.6",
     "tree-kill": "^1.0.0",
-    "ts-node": "^1.3.0",
+    "ts-node": "^2.0.0",
     "tslint": "^4.0.2"
   }
 }
