feat(@angular/cli): extend karma.conf.js w/ kjhtml reporter
karma-jasmine-html-reporter (kjhtml) displays Jasmine test runner in the test browser.

Close #4567

--- a/packages/@angular/cli/blueprints/ng2/files/package.json
+++ b/packages/@angular/cli/blueprints/ng2/files/package.json
@@ -36,6 +36,7 @@
     "karma-chrome-launcher": "~2.0.0",
     "karma-cli": "~1.0.1",
     "karma-jasmine": "~1.1.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
     "karma-coverage-istanbul-reporter": "^0.2.0",
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
