feat(@angular/cli): add ability to exclude files and directories (#4437)
Fixes #4350

--- a/packages/@angular/cli/blueprints/ng2/files/package.json
+++ b/packages/@angular/cli/blueprints/ng2/files/package.json
@@ -7,6 +7,7 @@
     "ng": "ng",
     "start": "ng serve",
     "test": "ng test",
+    "lint": "ng lint",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
     "e2e": "protractor"
   },
