feat: support TS 2.1 (#4572)
This requires Angular 4.

--- a/packages/@angular/cli/blueprints/ng2/files/package.json
+++ b/packages/@angular/cli/blueprints/ng2/files/package.json
@@ -41,6 +41,6 @@
     "protractor": "~5.1.0",
     "ts-node": "1.2.1",
     "tslint": "^4.3.0",
-    "typescript": "~2.0.3"
+    "typescript": "<%= ng4 ? '~2.1.0' : '~2.0.0' %>"
   }
 }
