--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ matrix:
   fast_finish: true
   allow_failures:
     - node_js: "7"
-    - env: NODE_SCRIPT="tests/run_e2e.js --nightly"
+    - env: NODE_SCRIPT="tests/run_e2e.js --nightly --ng4"
   include:
     - node_js: "6"
       os: linux
@@ -32,7 +32,7 @@ matrix:
     # Optional builds.
     - node_js: "6"
       os: linux
-      env: NODE_SCRIPT="tests/run_e2e.js --nightly"
+      env: NODE_SCRIPT="tests/run_e2e.js --nightly --ng4"
     - node_js: "6"
       os: linux
       env: NODE_SCRIPT="tests/run_e2e.js --ng4"
