build(@angular/cli): fix @angular dep warnings (#4592)
We still need these dependencies as they are peerDeps of @ngtools/webpack.

Partially revert #4473
Fix #4575

--- a/packages/@angular/cli/package.json
+++ b/packages/@angular/cli/package.json
@@ -26,6 +26,10 @@
   },
   "homepage": "https://github.com/angular/angular-cli",
   "dependencies": {
+    "@angular/compiler": ">=2.3.1 <5.0.0",
+    "@angular/compiler-cli": ">=2.3.1 <5.0.0",
+    "@angular/core": ">=2.3.1 <5.0.0",
+    "@angular/tsc-wrapped": ">=0.5.0 <5.0.0",
     "@ngtools/json-schema": "1.0.3",
     "@ngtools/webpack": "1.2.9",
     "autoprefixer": "^6.5.3",
