refactor: rebranding changes (#4602)

--- a/packages/@angular/cli/package.json
+++ b/packages/@angular/cli/package.json
@@ -9,7 +9,8 @@
   },
   "keywords": [
     "angular",
-    "angular-cli"
+    "angular-cli",
+    "Angular CLI"
   ],
   "repository": {
     "type": "git",
