test: add license test (#4561)
* test: add license test

* only check prod dependencies

* remove findup dep

* also check dev deps

* add map-stream to ignore list

* remove license-checker

* add comment

* use logger

* fix lint errors

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -164,7 +164,7 @@
     "guard-for-in": "off",
     "handle-callback-err": "off",
     "id-length": "off",
-    "indent": [2,2],
+    "indent": [2,2, { "SwitchCase": 1 }],
     "init-declarations": "off",
     "jsx-quotes": "off",
     "key-spacing": [2, {
