--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "build": "node ./scripts/publish/build.js",
     "build:patch": "node ./scripts/patch.js",
     "build:packages": "for PKG in packages/*; do echo Building $PKG...; tsc -p $PKG; done",
-    "test": "npm-run-all -c test:packages test:cli test:deps",
+    "test": "npm-run-all -c test:packages test:cli test:deps test:licenses",
     "e2e": "npm run test:e2e",
     "e2e:nightly": "node tests/run_e2e.js --nightly",
     "test:e2e": "node tests/run_e2e.js",
     "test:cli": "node tests/runner",
     "test:deps": "node scripts/publish/validate_dependencies.js",
     "test:inspect": "node --inspect --debug-brk tests/runner",
+    "test:licenses": "node scripts/test-licenses.js",
     "test:packages": "node scripts/run-packages-spec.js",
     "eslint": "eslint .",
     "tslint": "tslint \"**/*.ts\" -c tslint.json -e \"**/config/schema.d.ts\" -e \"**/tests/**\" -e \"**/blueprints/*/files/**/*.ts\" -e \"node_modules/**\" -e \"tmp/**\" -e \"dist/**\"",
@@ -57,7 +58,6 @@
     "exports-loader": "^0.6.3",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "file-loader": "^0.10.0",
-    "findup": "0.1.5",
     "fs-extra": "~2.0.0",
     "get-caller-file": "^1.0.0",
     "glob": "^7.0.3",
@@ -144,6 +144,7 @@
     "resolve-bin": "^0.4.0",
     "rewire": "^2.5.1",
     "sinon": "^1.17.3",
+    "spdx-satisfies": "^0.1.3",
     "through": "^2.3.6",
     "tree-kill": "^1.0.0",
     "ts-node": "^2.0.0",
