--- a/packages/@angular/cli/tsconfig.json
+++ b/packages/@angular/cli/tsconfig.json
@@ -8,6 +8,8 @@
     "moduleResolution": "node",
     "noEmitOnError": true,
     "noImplicitAny": true,
+    "noUnusedParameters": true,
+    "noUnusedLocals": true,
     "outDir": "../../../dist/@angular/cli",
     "rootDir": ".",
     "sourceMap": true,
