--- a/packages/@ngtools/logger/tsconfig.json
+++ b/packages/@ngtools/logger/tsconfig.json
@@ -7,6 +7,8 @@
     "moduleResolution": "node",
     "noEmitOnError": true,
     "noImplicitAny": true,
+    "noUnusedParameters": true,
+    "noUnusedLocals": true,
     "outDir": "../../../dist/@ngtools/logger",
     "rootDir": ".",
     "lib": [
