--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "declaration": true,
+    "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "mapRoot": "",
     "module": "commonjs",
@@ -10,12 +12,14 @@
     "noUnusedLocals": true,
     "outDir": "./dist",
     "rootDir": ".",
+    "skipLibCheck": true,
     "sourceMap": true,
     "sourceRoot": "",
-    "inlineSourceMap": true,
     "target": "es6",
     "lib": [
-      "es2016"
+      "es2015",
+      "es2016",
+      "es2017"
     ],
     "baseUrl": "",
     "typeRoots": [
@@ -26,10 +30,9 @@
       "node"
     ],
     "paths": {
-      "@angular/cli/*": [ "./packages/@angular/cli/*" ],
-      "@ngtools/json-schema": [ "./packages/json-schema/src" ],
-      "@ngtools/logger": [ "./packages/logger/src" ],
-      "@ngtools/webpack": [ "./packages/webpack/src" ]
+      "@ngtools/json-schema": [ "packages/@ngtools/json-schema/src" ],
+      "@ngtools/logger": [ "./packages/@ngtools/logger/src" ],
+      "@ngtools/webpack": [ "./packages/@ngtools/webpack/src" ]
     }
   },
   "exclude": [
