test: validate commit messages (#4903)

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "node ./scripts/publish/build.js",
     "build:patch": "node ./scripts/patch.js",
     "build:packages": "for PKG in packages/*; do echo Building $PKG...; tsc -p $PKG; done",
-    "test": "npm-run-all -c test:packages test:cli test:deps test:licenses",
+    "test": "npm-run-all -c test:packages test:cli test:deps test:licenses test:messages",
     "e2e": "npm run test:e2e",
     "e2e:nightly": "node tests/run_e2e.js --nightly",
     "test:e2e": "node tests/run_e2e.js",
@@ -20,6 +20,7 @@
     "test:deps": "node scripts/publish/validate_dependencies.js",
     "test:inspect": "node --inspect --debug-brk tests/runner",
     "test:licenses": "node scripts/test-licenses.js",
+    "test:messages": "node scripts/test-commit-messages.js",
     "test:packages": "node scripts/run-packages-spec.js",
     "eslint": "eslint .",
     "tslint": "tslint \"**/*.ts\" -c tslint.json -e \"**/config/schema.d.ts\" -e \"**/tests/**\" -e \"**/blueprints/*/files/**/*.ts\" -e \"node_modules/**\" -e \"tmp/**\" -e \"dist/**\"",
