--- a/package.json
+++ b/package.json
@@ -41,10 +41,10 @@
   },
   "homepage": "https://github.com/angular/angular-cli",
   "dependencies": {
-    "@angular/compiler": "^2.3.1",
-    "@angular/compiler-cli": "^2.3.1",
-    "@angular/core": "^2.3.1",
-    "@angular/tsc-wrapped": "^0.5.0",
+    "@angular/compiler": ">=2.3.1 <5.0.0 || >=4.0.0-beta <5.0.0",
+    "@angular/compiler-cli": ">=2.3.1 <5.0.0 || >=4.0.0-beta <5.0.0",
+    "@angular/core": ">=2.3.1 <5.0.0 || >=4.0.0-beta <5.0.0",
+    "@angular/tsc-wrapped": ">=0.5.0 <5.0.0 || >=4.0.0-beta <5.0.0",
     "autoprefixer": "^6.5.3",
     "chalk": "^1.1.3",
     "common-tags": "^1.3.1",
