--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/cli",
-  "version": "1.0.0-beta.32.3",
+  "version": "1.0.0-rc.0",
   "description": "CLI tool for Angular",
   "main": "packages/@angular/cli/lib/cli/index.js",
   "trackingCode": "UA-8594346-19",
@@ -57,7 +57,7 @@
     "ember-cli-string-utils": "^1.0.0",
     "enhanced-resolve": "^3.1.0",
     "exports-loader": "^0.6.3",
-    "extract-text-webpack-plugin": "^2.0.0-rc.3",
+    "extract-text-webpack-plugin": "~2.0.0",
     "file-loader": "^0.10.0",
     "fs-extra": "~2.0.0",
     "get-caller-file": "^1.0.0",
