fix(@angular/cli): Align tsconfig output dir to out-tsc. Add out-tsc to .gitignore
Added /out-tsc to the .gitignore blueprint. If someone runs tsc -p src/tsconfig.spec.json it outputs to the ../out-tsc folder. These should
be ignored.

Also changed
https://github.com/angular/angular-cli/blob/master/packages/%40angular/cli/blueprints/ng/files/e2e/tsconfig.e2e.json#L13 to ../out-tsc/e2e so that they all match.

cc @filipesilva

fixing due to issue with CLA from #5062

Close #5220

--- a/packages/@angular/cli/blueprints/ng/files/e2e/tsconfig.e2e.json
+++ b/packages/@angular/cli/blueprints/ng/files/e2e/tsconfig.e2e.json
@@ -10,7 +10,7 @@
     "lib": [
       "es2016"
     ],<% } %>
-    "outDir": "../dist/out-tsc-e2e",
+    "outDir": "../out-tsc/e2e",
     "module": "commonjs",
     "target": "es5",
     "types":[
