--- a/packages/@angular/cli/package.json
+++ b/packages/@angular/cli/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/angular/angular-cli",
   "dependencies": {
+    "@angular/compiler-cli": "^4.0.0",
     "@ngtools/json-schema": "1.1.0",
     "@ngtools/webpack": "1.4.0",
     "autoprefixer": "^6.5.3",
