--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "loader-utils": "^1.0.2",
     "lodash": "^4.11.1",
     "magic-string": "^0.19.0",
+    "markdown-loader": "^2.0.0",
     "markup-inline-loader": "^0.2.0",
     "memory-fs": "^0.4.1",
     "minimatch": "^3.0.3",
